Fixes to get project compiling//exporting on Mac. Duplicated OpenXRHandTracking plugin to make it load on Mac

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=EHardwareClass::Mobile
 AppliedTargetedHardwareClass=Mobile
@@ -14,6 +12,9 @@ TinyFontName=/Engine/EngineFonts/RobotoTiny.RobotoTiny
 MediumFontName=/Engine/EngineFonts/Roboto.Roboto
 LargeFontName=/Engine/VREditor/Fonts/VRText_RobotoLarge.VRText_RobotoLarge
 bAllowMultiThreadedAnimationUpdate=True
+
+[CoreRedirects]
++ClassRedirects=(OldClassName="/Script/OpenXRHandTracking.OpenXRHandTrackingLiveLinkRemapAsset",NewClassName="/Script/OpenXRHandTrackingCrossPlatform.OpenXRHandTrackingCrossPlatformLiveLinkRemapAsset", MatchSubstring=true)
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
