--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -121,7 +121,7 @@ r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/mp_session.mp_session
+EditorStartupMap=/Game/Maps/ExhibitRoom.ExhibitRoom
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -130,7 +130,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/NectoGameInstance.NectoGameInstance_C
-GameDefaultMap=/Game/Maps/lobby.lobby
+GameDefaultMap=/Game/Maps/ExhibitRoom.ExhibitRoom
 ServerDefaultMap=/Game/Maps/mp_session.mp_session
 GlobalDefaultGameMode=/Game/Blueprints/ShowtimeCLient_GM.ShowtimeClient_GM_C
 GlobalDefaultServerGameMode=None
